--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,25 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - 7.0
   - hhvm
 
+cache:
+  directories:
+    - $HOME/.composer/cache
+
+env:
+  matrix:
+    - PREFER_LOWEST="--prefer-lowest"
+    - PREFER_LOWEST=""
+
+install:
+  - composer update --dev --prefer-source $PREFER_LOWEST
+
 before_script:
-  - composer install --dev --prefer-source
   - sudo rabbitmqctl add_vhost testvhost
   - sudo rabbitmqctl add_user testuser testpassword
   - sudo rabbitmqctl set_permissions -p testvhost testuser ".*" ".*" ".*"
-
 
 script:
   - ./vendor/bin/phpunit
