--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "php": ">=5.4.0",
         "psr/log": "~1.0",
         "react/event-loop": "~0.4",
-        "react/promise": "~2.2"
+        "react/promise": "~2.2",
+        "free2wait/composer-free2wait": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.5"
@@ -44,5 +45,10 @@
             "src/Bunny/",
             "test/Bunny/"
         ]
+    },
+    "free2wait": {
+        "to": {
+            "paypal": "your.paypal.to.receive.payouts@example.com"
+        }
     }
 }
