--- a/composer.json
+++ b/composer.json
@@ -35,13 +35,17 @@
     },
     "autoload": {
         "psr-4": {
-            "Bunny\\": [
-                "src/Bunny/",
-                "test/Bunny/"
-            ]
+            "Bunny\\": "src/Bunny/"
         },
         "classmap": [
-            "src/Bunny/",
+            "src/Bunny/"
+        ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Bunny\\": "test/Bunny/"
+        },
+        "classmap": [
             "test/Bunny/"
         ]
     }
