--- a/composer.json
+++ b/composer.json
@@ -25,13 +25,13 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
+        "php": "~7.0",
         "psr/log": "~1.0",
         "react/event-loop": "~0.4",
         "react/promise": "~2.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.5"
+        "phpunit/phpunit": "~6.5"
     },
     "autoload": {
         "psr-4": {
