--- a/.travis.yml
+++ b/.travis.yml
@@ -20,15 +20,18 @@ env:
   jobs:
     - PREFER_LOWEST="--prefer-lowest"
     - PREFER_LOWEST=""
+    - SSL_TEST="yes" SSL_CA="ssl/ca.pem" SSL_PEER_NAME="server.rmq"
+    - SSL_TEST="yes" SSL_CA="ssl/ca.pem" SSL_PEER_NAME="server.rmq" SSL_CLIENT_CERT="ssl/client.pem" SSL_CLIENT_KEY="ssl/client.key"
 
 jobs:
   allow_failures:
     - php: nightly
 
 install:
-  - composer update --dev --prefer-source $PREFER_LOWEST
+  - composer update --prefer-source $PREFER_LOWEST
 
 before_script:
+  - if [ ! -z "$SSL_TEST" ] ; then test/ssl/travis.sh; fi
   - sudo rabbitmqctl add_vhost testvhost
   - sudo rabbitmqctl add_user testuser testpassword
   - sudo rabbitmqctl set_permissions -p testvhost testuser ".*" ".*" ".*"
