--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,15 @@
-dist: trusty
+dist: bionic
 
 os: linux
 
 language: php
 
 php:
-  - 7.0
   - 7.1
   - 7.2
   - 7.3
   - 7.4
+  - 8.0
   - nightly
 
 cache:
@@ -41,3 +41,8 @@ script:
 
 services:
   - rabbitmq
+
+addons:
+  apt:
+    packages:
+      - rabbitmq-server
