--- a/composer.json
+++ b/composer.json
@@ -25,13 +25,13 @@
         }
     ],
     "require": {
-        "php": "~7.0",
+        "php": "^7.1 || ^8.0",
         "psr/log": "~1.0",
         "react/event-loop": "^1.0 || ^0.5 || ^0.4",
         "react/promise": "~2.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "~6.5"
+        "phpunit/phpunit": "^7.5 || ^8.5 || ^9.3"
     },
     "autoload": {
         "psr-4": {
