--- a/test/ssl/rabbitmq.ssl.verify_none.conf
+++ b/test/ssl/rabbitmq.ssl.verify_none.conf
@@ -7,4 +7,4 @@ ssl_options.cacertfile = /etc/rabbitmq/ca.pem
 ssl_options.certfile = /etc/rabbitmq/server.pem
 ssl_options.keyfile = /etc/rabbitmq/server.key
 ssl_options.verify = verify_none
-ssl_options.fail_if_no_peer_cert = falsee
+ssl_options.fail_if_no_peer_cert = false
