--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "react/promise": "~2.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5 || ^8.5 || ^9.3"
+        "phpunit/phpunit": "^9.5 || ^7.5.20"
     },
     "autoload": {
         "psr-4": {
