--- a/test/ssl/rabbitmq.ssl.verify_none.conf
+++ b/test/ssl/rabbitmq.ssl.verify_none.conf
@@ -1,10 +1,10 @@
 # for RMQ 3.7.0 and above
 
+loopback_users = none
 listeners.tcp.default = 5672
-
 listeners.ssl.default = 5673
-ssl_options.cacertfile = /etc/rabbitmq/ca.pem
-ssl_options.certfile = /etc/rabbitmq/server.pem
-ssl_options.keyfile = /etc/rabbitmq/server.key
+ssl_options.cacertfile = /rabbitmq-certs/ca.pem
+ssl_options.certfile = /rabbitmq-certs/server.pem
+ssl_options.keyfile = /rabbitmq-certs/server.key
 ssl_options.verify = verify_none
 ssl_options.fail_if_no_peer_cert = false
