--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "require": {
         "php": "^7.1 || ^8.0",
         "ext-pcntl": "*",
-        "react/event-loop": "^1.0 || ^0.5 || ^0.4",
+        "react/event-loop": "^1.2",
         "react/promise": "~2.2"
     },
     "require-dev": {
