--- a/docker/bunny/Dockerfile
+++ b/docker/bunny/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:7.4-cli
+FROM php:8.1-cli
 
 RUN apt-get update \
     && apt-get dist-upgrade -y \
@@ -10,6 +10,7 @@ RUN apt-get update \
 
 RUN pecl install xdebug \
     && docker-php-ext-enable xdebug
+RUN echo "xdebug.mode=coverage" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
 
 RUN curl --silent --show-error https://getcomposer.org/installer | php
 RUN mv composer.phar /usr/local/bin/composer
