Set SSL_TEST=no when matrix.ssl_test=no

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,6 +80,8 @@ jobs:
       - name: Run UnitTests
         if: matrix.ssl_test == 'no'
         run: ./vendor/bin/phpunit
+        env:
+          SSL_TEST: "no"
       - name: Run UnitTests
         if: matrix.ssl_test == 'yes'
         run: ./vendor/bin/phpunit
