--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,6 +82,7 @@ jobs:
         run: ./vendor/bin/phpunit
         env:
           SSL_TEST: "no"
+          TEST_RABBITMQ_CONNECTION_URI: "amqp://guest:guest@localhost:5672/"
       - name: Run UnitTests
         if: matrix.ssl_test == 'yes'
         run: ./vendor/bin/phpunit
@@ -89,6 +90,7 @@ jobs:
           SSL_TEST: "yes"
           SSL_CA: "ssl/ca.pem"
           SSL_PEER_NAME: "server.rmq"
+          TEST_RABBITMQ_CONNECTION_URI: "amqp://guest:guest@localhost:5672/"
       - name: Run UnitTests
         if: matrix.ssl_test == 'client'
         run: ./vendor/bin/phpunit
@@ -98,6 +100,7 @@ jobs:
           SSL_PEER_NAME: "server.rmq"
           SSL_CLIENT_CERT: "ssl/client.pem"
           SSL_CLIENT_KEY: "ssl/client.key"
+          TEST_RABBITMQ_CONNECTION_URI: "amqp://guest:guest@localhost:5672/"
       - name: Docker Logs
         if: ${{ failure() }}
         run: docker logs rabbitmq
