--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,11 @@ services:
   bunny:
     build: docker/bunny
     environment:
+      SSL_TEST: "client"
+      SSL_CA: "ssl/ca.pem"
+      SSL_CLIENT_CERT: "ssl/client.pem"
+      SSL_CLIENT_KEY: "ssl/client.key"
+      SSL_PEER_NAME: "server.rmq"
       TEST_RABBITMQ_CONNECTION_URI: "amqp://testuser:testpassword@bunny_rabbit_node_1_1:5672/testvhost"
     volumes:
       - .:/opt/bunny
