--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,13 @@
     ],
     "require": {
         "php": "^7.1 || ^8.0",
+        "ext-pcntl": "*",
         "react/event-loop": "^1.0 || ^0.5 || ^0.4",
         "react/promise": "~2.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5 || ^7.5.20"
+        "phpunit/phpunit": "^9.5 || ^7.5.20",
+        "symfony/process": "^6.1"
     },
     "autoload": {
         "psr-4": {
@@ -38,6 +40,7 @@
         }
     },
     "autoload-dev": {
+        "files": ["test/Library/functions.php"],
         "psr-4": {
             "Bunny\\": "test/Bunny/",
             "Bunny\\Test\\Library\\": "test/Library/"
