--- a/docker/bunny/Dockerfile
+++ b/docker/bunny/Dockerfile
@@ -8,6 +8,9 @@ RUN apt-get update \
         vim \
         zip
 
+RUN docker-php-ext-configure pcntl --enable-pcntl \
+    && docker-php-ext-install pcntl
+
 RUN pecl install xdebug \
     && docker-php-ext-enable xdebug
 RUN echo "xdebug.mode=coverage" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
