--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5 || ^7.5.20",
-        "symfony/process": "^6.1"
+        "symfony/process": "^6.1 || ^4.4"
     },
     "autoload": {
         "psr-4": {
