--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,6 @@
 /phpunit.xml export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
+/.github/ export-ignore
+/docker/ export-ignore
+/examples/ export-ignore
