--- a/.gitattributes
+++ b/.gitattributes
@@ -1,11 +1,11 @@
+/.github/ export-ignore
 /benchmark/ export-ignore
+/docker/ export-ignore
+/examples/ export-ignore
 /spec/ export-ignore
 /test/ export-ignore
 /tutorial  export-ignore
-/.travis.yml export-ignore
-/phpunit.xml export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
-/.github/ export-ignore
-/docker/ export-ignore
-/examples/ export-ignore
+/docker-compose.yml export-ignore
+/phpunit.xml export-ignore
